# xla-launcher

./: .bazelrc  .clang-format  .gitignore  LICENSE  README.md  README_Chinese.md  WORKSPACE  build.sh  configure.py
build_deps/python/: BUILD.bazel  requirements.in  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_test.txt
xla_launcher/: BUILD.bazel  device.cpp  device.hpp  dlpack_converter.cpp  dlpack_converter.hpp  format.sh  hash.cpp  hash.hpp  mlir_transform_type.hpp  xla_build_helper.cpp  xla_build_helper.hpp  xla_convert_ops.cpp  xla_convert_ops.hpp  xla_graph_executor.cpp  xla_graph_executor.hpp  xla_launcher.cpp  xla_launcher.hpp  xla_shape_helper.cpp  xla_shape_helper.hpp  xla_translate_main.cpp  xla_translate_opt_main.cpp
xla_launcher/runtime/: BUILD.bazel  computation_cache.hpp  computation_cache_test.cpp  computation_client.cpp  computation_client.hpp  debug_macros.hpp  env.hpp  mlir_pass_helper.cpp  mlir_pass_helper.hpp  mlir_pass_helper_test.cpp  mlir_pass_test.cpp  operation_manager.cpp  operation_manager.hpp  pjrt_computation_client.cpp  pjrt_computation_client.hpp  pjrt_computation_client_test.cpp  pjrt_registry.cpp  pjrt_registry.hpp  profiler.cpp  profiler.hpp  runtime.cpp  runtime.hpp  stablehlo_composite_helper.cpp  stablehlo_composite_helper.hpp  stablehlo_helper.cpp  stablehlo_helper.hpp  sys_util.cpp  sys_util.hpp  tensor_source.hpp  xla_env_hash.cpp  xla_env_hash.hpp  xla_mlir_debuginfo_helper.cpp  xla_mlir_debuginfo_helper.hpp  xla_util.cpp  xla_util.hpp
xla_launcher/test/: BUILD.bazel  run_stablehlo_kernel_test.cpp
xla_launcher/test/adamw_kernel/: BUILD.bazel  generate_adamw_stablehlo_bin.py
xla_patches/: gpu_nvml.diff
